[package]
name = "rs-img2png"
version = "0.1.0"
edition = "2024"

description = "Converts the input image bytes to a PNG."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-img2png"
homepage = "https://github.com/takanoriyanagitani/rs-img2png"
documentation = "https://docs.rs/rs-img2png/latest"
keywords = ["image", "convert", "png", "wasi"]

exclude = [
    "rs-img2png.wasm",
    "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.image]
version = "0.25"
features = [
    "bmp",
    "exr",
    "gif",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

